...
            Button(
                onClick = { navController.navigate(QuizScreenRoute.CreateGame.routeName) },
                modifier = Modifier
                    .padding(16.dp)
                    .fillMaxWidth()
            ) {
                Text(text = "Start new Quiz")
            }
        }
    }
}

